# finally-animatronics-api

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build_and_push_main_to_ecr.yml
finally_animatronics_api/docs/: notes.txt
finally_animatronics_api/src/: main.py
