[project]
name = "finally-animatronics-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Daigle",email = "mcdaigle1@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{ include = "finally_animatronics_api" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
