[project]
name = "finally-animatronics-api"
description = ""
authors = [
    {name = "Michael Daigle",email = "mcdaigle1@gmail.com"}
]
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0"
]

[tool.poetry]
name = "finally-animatronics-api"
version = "0.0.9"
description = ""
authors = ["mcdaigle1@gmail.com"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.0"
pytest = "^8.0.0"